- The match creator can now stop the match.
- Added `g*leave` back in! You can now use it if you're not the match creator to leave the match.
- `g*profile` now sends a fancy image! You'll be able to change the background in the future.
- Changed detective for killers to pick who to kill with A/B/C thing.
- Removed the reach leaderboard position achievement. It's not like it worked anyway...

- Fixed token rewards in games.
- Fixed reverse tic-tac-toe.
- Fixed ties in tic-tac-toe.
Enjoy! ~ deprilula28